--- a/Services/Order/FreeCourse.Services.Order.Application/FreeCourse.Services.Order.Application.csproj
+++ b/Services/Order/FreeCourse.Services.Order.Application/FreeCourse.Services.Order.Application.csproj
@@ -5,7 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Shared\FreeCourse.Shared\FreeCourse.Shared.csproj" />
     <ProjectReference Include="..\FreeCourse.Services.Order.Domain\FreeCourse.Services.Order.Domain.csproj" />
+    <ProjectReference Include="..\FreeCourse.Services.Order.Infrastracture\FreeCourse.Services.Order.Infrastracture.csproj" />
   </ItemGroup>
 
 </Project>
