--- a/Services/Product/FreeCourse.Services.Product/appsettings.json
+++ b/Services/Product/FreeCourse.Services.Product/appsettings.json
@@ -7,8 +7,9 @@
     }
   },
   "ConnectionStrings": {
-    "MssqlDbContext": "Server = (localdb)\\MSSQLLocalDB; Database = Northwind; Trusted_Connection = true"
+    "MssqlDbContext": "Server=localhost,1445;Database=ProductDb; User=sa; Password=Password12*"
     //Server=localhost,1444;Database=OrderDb; User=sa; Password=Password12*
+    //Server = (localdb)\\MSSQLLocalDB; Database = Northwind; Trusted_Connection = true
   },
   "AllowedHosts": "*"
 }
