--- a/Services/Order/FreeCourse.Services.Order.API/FreeCourse.Services.Order.API.csproj
+++ b/Services/Order/FreeCourse.Services.Order.API/FreeCourse.Services.Order.API.csproj
@@ -5,7 +5,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.13" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.13">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Shared\FreeCourse.Shared\FreeCourse.Shared.csproj" />
+    <ProjectReference Include="..\FreeCourse.Services.Order.Application\FreeCourse.Services.Order.Application.csproj" />
+    <ProjectReference Include="..\FreeCourse.Services.Order.Infrastracture\FreeCourse.Services.Order.Infrastracture.csproj" />
   </ItemGroup>
 
 </Project>
