--- a/Services/Order/FreeCourse.Services.Order.API/appsettings.json
+++ b/Services/Order/FreeCourse.Services.Order.API/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1444;Database=OrderDb;User=sa;Password=Password12*"
+  },
+  "IdentityServerUrl": "http://localhost:5001",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,5 +10,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+
   "AllowedHosts": "*"
 }
