--- a/Frontends/FreeCourse.Web/appsettings.json
+++ b/Frontends/FreeCourse.Web/appsettings.json
@@ -3,8 +3,18 @@
     "IdentityBaseUri": "http://localhost:5001",
     "GatewayBaseUri": "http://localhost:5000",
     "PhotoStockUri": "http://localhost:5012",
+    
     "Catalog": {
       "Path": "services/catalog/"
+    },
+    "PhotoStock": {
+      "Path": "services/photostock/"
+    },
+    "Basket": {
+      "Path": "services/basket/"
+    },
+    "Discount": {
+      "Path": "services/discount/"
     }
   },
   "ClientSettings": {
