--- a/Frontends/FreeCourse.Web/appsettings.json
+++ b/Frontends/FreeCourse.Web/appsettings.json
@@ -3,7 +3,7 @@
     "IdentityBaseUri": "http://localhost:5001",
     "GatewayBaseUri": "http://localhost:5000",
     "PhotoStockUri": "http://localhost:5012",
-    
+
     "Catalog": {
       "Path": "services/catalog/"
     },
@@ -15,7 +15,16 @@
     },
     "Discount": {
       "Path": "services/discount/"
+    },
+    "Payment": {
+      "Path": "services/fakepayment/"
+    },
+    "Order": {
+      "Path": "services/order/"
     }
+
+
+  
   },
   "ClientSettings": {
     "WebClient": {
