--- a/Services/Catalog/FreeCourse.Services.Catalog/appsettings.json
+++ b/Services/Catalog/FreeCourse.Services.Catalog/appsettings.json
@@ -1,11 +1,12 @@
 {
+  "RabbitMQUrl": "localhost",
   "DatabaseSettings": {
     "CourseCollectionName": "Courses",
     "CategoryCollectionName": "Categories",
     "ConnectionStrings": "mongodb://localhost:27018", //Docker Kullanirken localhost gozukmicek connection string virtual olucak ve dockerin servisini buraya yazicaz
     "DatabaseName": "CatalogDb"
   },
-  "IdentityServerUrl": "http://localhost:5001", 
+  "IdentityServerUrl": "http://localhost:5001",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
