--- a/FreeCourse.Gateway/appsettings.json
+++ b/FreeCourse.Gateway/appsettings.json
@@ -7,5 +7,9 @@
     }
   },
   "IdentityServerUrl": "http://localhost:5001",
+  "ClientId": "TokenExchangeClient",
+  "ClientSecret": "secret",
+  "TokenGrantType": "urn:ietf:params:oauth:grant-type:token-exchange",
+  "SubjectTokenType": "urn:ietf:params:oauth:token-type:access-token",
   "AllowedHosts": "*"
 }
