--- a/FreeCourse.Gateway/FreeCourse.Gateway.csproj
+++ b/FreeCourse.Gateway/FreeCourse.Gateway.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="IdentityModel" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.13" />
     <PackageReference Include="Ocelot" Version="17.0.1" />
   </ItemGroup>
