--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -57,7 +57,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - RabbitMQUrl=rabbitmq
       - IdentityServerURL=http://identityserver.api
-      - DatabaseSettings:ConnectionString=mongodb://catalogdb:27018
+      - DatabaseSettings:ConnectionString=mongodb://catalogdb:27017
       ports:
       - "5011:80"
       depends_on:
@@ -118,32 +118,31 @@ services:
        - ASPNETCORE_ENVIRONMENT=Development
        - IdentityServerURL=http://identityserver.api   
        - RabbitMQUrl=rabbitmq
-       - "ConnectionStrings:DefaultConnection=Server=orderdb,1444;Database=OrderDb;User=sa;Password=Password12*"
+       - "ConnectionStrings:DefaultConnection=Server=orderdb,1433;Database=OrderDb;User=sa;Password=Password12*"
       ports:
        - 5018:80  
       depends_on:
        - orderdb 
     gateway.api:
-      container_name: gateway.api
-      restart: always
-      environment:
-       - ASPNETCORE_ENVIRONMENT=Production
-       - IdentityServerUrl=http://identityserver.api
-      ports:
-       - 5000:80
+     container_name: gateway.api
+     environment:
+      - ASPNETCORE_ENVIRONMENT=Production
+      - IdentityServerURL=http://identityserver.api
+     ports:
+        - 5000:80 
     aspnetcoremvc.web: 
       container_name: aspnetcoremvc.web
       environment: 
        - ASPNETCORE_ENVIRONMENT=Development
        - "ServiceApiSettings:IdentityBaseUri=http://identityserver.api" 
-       - "ServiceApiSettings:GatewayBaseUri=https://gateway.api"
+       - "ServiceApiSettings:GatewayBaseUri=http://gateway.api"
       ports:
        - 5010:80 
       depends_on:
-        - gateway.api 
+        - catalog.api
+        - gateway.api
         - order.api
         - identityserver.api
-        - catalog.api
         - fakepayment.api
         - discount.api
         - basket.api
